[#168090759], [#157793674] Casetable hscroll bugs
* "Plus" button could get missplaced after adding attribute
* case table title could get off center after adding attribute
* "Plus" button would not dismiss correctly
* Case table title edit difficult to dismiss (would occupy entire
region)

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -92,7 +92,7 @@ html, body {
     font-size: 8pt !important;
 }
 
-.dg-case-table-title {
+.dg-case-table-title-bar-container {
     font-style: italic;
     font-size: 15px;
     color: rgba(15,38,51,1);
@@ -341,9 +341,11 @@ html, body {
 }
 
 /* hidden in selected components when explicitly disabled */
+/*
 .dg-component-view-selected .dg-floating-plus.disabled {
     visibility: hidden;
 }
+*/
 
 /* hidden in unselected components */
 .dg-floating-plus {
